--- a/public/templates/form-view.html
+++ b/public/templates/form-view.html
@@ -1,7 +1,7 @@
 <div>
   <h2>Add Link</h2>
-  <form>
-    <input type="text">
+  <form ng-submit="addUrl()">
+    <input type="text" ng-model="url">
     <button type="submit">Add</button>
   </form>
 </div>
