--- a/public/templates/list-view.html
+++ b/public/templates/list-view.html
@@ -1,6 +1,5 @@
 <div>
   <h2>Saved Links</h2>
-  <div>
-    
-  </div>
+  <list-item ng-repeat="url in urls track by $index">
+  </list-item>
 </div>
